<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tituloTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/firebrick"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_repitacontrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repita_contrasena"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_fecha_de_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nacimiento"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/fecha_nacimiento"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ib_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="onCalendarioButtonClicked"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/s_ciudades"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/btn_dropdown"
            android:dropDownWidth="wrap_content"
            android:entries="@array/lista_ciudades"
            android:scrollbarSize="5dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_red_dark"
                android:checked="true"
                android:text="@string/masculino"
                android:textColorLink="@android:color/black"
                android:textCursorDrawable="@android:color/holo_green_light" />

            <RadioButton
                android:id="@+id/rb_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_red_dark"
                android:text="@string/femenino"
                android:textColorLink="@android:color/background_dark"
                android:textCursorDrawable="@android:color/holo_green_light" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_pasatiempos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pasatiempos"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_cine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_red_dark"
                android:text="@string/cine" />

            <CheckBox
                android:id="@+id/cb_videojuegos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_red_dark"
                android:text="@string/videojuegos" />

            <CheckBox
                android:id="@+id/cb_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_red_dark"
                android:checked="false"
                android:text="@string/series" />

            <CheckBox
                android:id="@+id/cb_deportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_red_dark"
                android:text="@string/deportes" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brown"
            android:text="@string/guardar"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>